<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/title_detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/shipper"
            android:textColor="@color/themeBlack"
            android:textSize="14sp"
            tools:text="托运人" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/ordinary_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/from"
                tools:text="              从：" />

            <EditText
                android:id="@+id/ordinary_from_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/ordinary_from"
                android:background="@color/line"
                android:drawableEnd="@mipmap/my_ic_arrow"
                android:focusable="false"
                android:hint="@string/input_address"
                android:padding="10dp"
                android:textColorHint="@color/gray_line"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/ordinary_from_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/detail_address_"
                tools:text="详细地址：" />

            <EditText
                android:id="@+id/ordinary_from_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/ordinary_from_address"
                android:background="@color/line"
                android:hint="@string/input_detail_address"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/gray_line"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/ordinary_from_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/contact"
                tools:text="     联系人：" />

            <EditText
                android:id="@+id/ordinary_from_contact_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/ordinary_from_contact"
                android:background="@color/line"
                android:hint="@string/input_contact"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/gray_line"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/ordinary_from_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/phone"
                tools:text="          电话：" />

            <EditText
                android:id="@+id/ordinary_from_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/ordinary_from_phone"
                android:background="@color/line"
                android:hint="@string/input_contact_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="@color/gray_line"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/line" />
</LinearLayout>