<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.xinze.haoke.widget.SimpleToolbar
        android:id="@+id/find_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/find_goods_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableEnd="@mipmap/goods_pick_up"
                android:gravity="center_vertical"
                android:text="@string/order_id"
                android:textColor="@color/themeBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:padding="15dp"
                android:text="@string/receive_details"
                android:textColor="@color/order_item_text"
                android:textSize="14sp" />





                <TextView
                    android:id="@+id/find_goods_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    tools:text ="@string/receiver_order"
                    android:drawableEnd="@mipmap/phone"
                    android:textColor="@color/themeBlack"
                    android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:background="@color/gray_line"
                android:layout_height="1px"/>
            <TextView
                android:id="@+id/goods_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                tools:text ="@string/driver"
                android:drawableEnd="@mipmap/phone"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:background="@color/gray_line"
                android:layout_height="1px"/>
            <TextView
                android:id="@+id/car_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                tools:text ="@string/carNumber"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:background="@color/gray_line"
                android:layout_height="1px"/>
            <TextView
                android:id="@+id/car_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/carType"
                android:textColor="@color/themeBlack"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:background="@color/gray_line"
                android:layout_height="1px"/>

            <TextView
                android:id="@+id/order_upload_evidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:padding="15dp"
                android:text="@string/order_upload"
                android:textColor="@color/order_item_text"
                android:textSize="14sp" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/upload_evidence_list"
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:layout_height="wrap_content"/>




                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <Button
                        android:id="@+id/reject_order"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/bg_orange_button"
                        android:text="@string/reject_order"
                        android:textColor="@color/themeOrange"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/agree_order"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/circle_orange_button"
                        android:text="@string/agree_order"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>