<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.xinze.haoke.widget.SimpleToolbar
        android:id="@+id/select_goods_type_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/select_tip"
        android:textSize="14sp"
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/half_line"
        android:padding="15dp"
        android:textSize="16sp"
        android:text="@string/always_goods_type" />
    <EditText
        android:id="@+id/goods_type_name"
        android:drawableStart="@mipmap/search_bar_icon_pressed"
        android:hint="@string/please_input_goods_type_name"
        android:layout_width="match_parent"
        android:drawablePadding="10dp"
        android:layout_margin="15dp"
        android:textSize="14sp"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/select_driver_rv"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content" />
</LinearLayout>