<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xinze.haoke.widget.SimpleToolbar
        android:id="@+id/select_driver_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/select_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_driver_toolbar"
        android:background="@color/line"
        android:padding="15dp"
        tool:text="@string/please_select_driver" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/select_driver_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ordinary_protocol_rl"
        android:layout_below="@id/select_tv" />

    <RelativeLayout
        android:id="@+id/ordinary_protocol_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ordinary_release"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/ordinary_protocol_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@mipmap/select_choice"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/ordinary_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ordinary_protocol_iv"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/themeBlack"
            android:textSize="14sp"
            tool:text="我已仔细阅读并同意《委托运输服务合同》" />

    </RelativeLayout>


    <Button
        android:id="@+id/ordinary_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle_orange_button"
        android:text="@string/release_the_bill_of_goods"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>